--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "eslint": "^9.17.0",
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-solid": "^0.14.5",
-    "globals": "^15.14.0",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.4",
-    "vite-plugin-solid": "^2.11.0",
+    "globals": "^16.0.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.25.0",
+    "vite": "^6.2.0",
+    "vite-plugin-solid": "^2.11.6",
     "vite-plugin-solid-svg": "^0.8.1"
   },
   "dependencies": {
-    "@kobalte/core": "^0.13.7",
-    "@solid-primitives/script-loader": "^2.2.0",
-    "@solidjs/router": "^0.15.2",
+    "@kobalte/core": "^0.13.9",
+    "@solid-primitives/script-loader": "^2.3.0",
+    "@solidjs/router": "^0.15.3",
     "chartist": "^1.3.0",
-    "idb": "^8.0.1",
-    "solid-js": "^1.9.3"
+    "idb": "^8.0.2",
+    "solid-js": "^1.9.5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
